--- a/src/Attribute/wally.toml
+++ b/src/Attribute/wally.toml
@@ -1,10 +1,10 @@
 [package]
-name = "senor/attribute"
+name = "si-senortn/attribute"
 description = "Attribute class"
 version = "0.0.1"
 registry = "https://github.com/UpliftGames/wally-index"
 realm = "shared"
 
 [dependancies]
-set = "senor/set@^0.1"
-Signal = "senor/signal@^0.1"
+set = "si-senortn/set@^0.0"
+Signal = "si-senortn/signal@^0.0"
