--- a/src/Signal/wally.toml
+++ b/src/Signal/wally.toml
@@ -1,5 +1,5 @@
 [package]
-name = "senor/signal"
+name = "si-senortn/signal"
 description = "Signal class"
 version = "0.0.1"
 registry = "https://github.com/UpliftGames/wally-index"
