--- a/src/strict/wally.toml
+++ b/src/strict/wally.toml
@@ -1,5 +1,5 @@
 [package]
-name = "senor/strict"
+name = "si-senortn/strict"
 description = "strict guard tables"
 version = "0.0.1"
 registry = "https://github.com/UpliftGames/wally-index"
