--- a/src/Enum/wally.toml
+++ b/src/Enum/wally.toml
@@ -1,9 +1,9 @@
 [package]
-name = "senor/enum"
+name = "si-senortn/enum"
 description = "Enum class"
 version = "0.0.1"
 registry = "https://github.com/UpliftGames/wally-index"
 realm = "shared"
 
 [dependancies]
-Symbol = "senor/symbol@^0.1"
+Symbol = "si-senortn/symbol@^0.0"
