--- a/src/Input/wally.toml
+++ b/src/Input/wally.toml
@@ -1,5 +1,5 @@
 [package]
-name = "senor/input"
+name = "si-senortn/input"
 description = "Input utility"
 version = "0.0.1"
 registry = "https://github.com/UpliftGames/wally-index"
