--- a/src/Enum/wally.toml
+++ b/src/Enum/wally.toml
@@ -1,9 +1,9 @@
 [package]
 name = "si-senortn/enum"
 description = "Enum class"
-version = "0.0.1"
+version = "0.0.2"
 registry = "https://github.com/UpliftGames/wally-index"
 realm = "shared"
 
-[dependancies]
-Symbol = "si-senortn/symbol@^0.0"
+[dependencies]
+Symbol = "si-senortn/symbol@0.0.1"
