--- a/src/Color/wally.toml
+++ b/src/Color/wally.toml
@@ -1,9 +1,9 @@
 [package]
 name = "si-senortn/color"
 description = "Color utility"
-version = "0.0.1"
+version = "0.0.2"
 registry = "https://github.com/UpliftGames/wally-index"
 realm = "shared"
 
-[dependancies]
-Math = "si-senortn/math@^0.0"
+[dependencies]
+Math = "si-senortn/math@0.0.1"
