--- a/src/Config/wally.toml
+++ b/src/Config/wally.toml
@@ -6,5 +6,5 @@ registry = "https://github.com/UpliftGames/wally-index"
 realm = "shared"
 
 [dependencies]
-Trove = "sleitnick/trove@0.1.3"
+Trove = "sleitnick/trove@^0.1"
 Symbol = "si-senortn/symbol@0.0.1"
