--- a/src/Streamable/wally.toml
+++ b/src/Streamable/wally.toml
@@ -1,10 +1,10 @@
 [package]
 name = "si-senortn/streamable"
 description = "Streamable class"
-version = "0.2.1"
+version = "0.2.2"
 registry = "https://github.com/UpliftGames/wally-index"
 realm = "shared"
 
 [dependencies]
 Trove = "sleitnick/trove@^1"
-Signal = "si-senortn/signal@0.1.0"
+Signal = "sleitnick/signal@2.0.1"
